// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Option should render a default Option 1`] = `
<li
  aria-disabled={false}
  className="option is-default"
  data-terra-select-option={true}
  disabled={false}
  role="option"
  tabIndex="0"
>
  <span
    className="display"
  >
    display
  </span>
</li>
`;

exports[`Option should render a disabled Option 1`] = `
<li
  aria-disabled={true}
  className="option is-default is-disabled"
  data-terra-select-option={true}
  disabled={true}
  role="option"
  tabIndex="0"
>
  <span
    className="display"
  >
    display
  </span>
</li>
`;
